# Rehab-AI-RK3588

./: .gitignore  CMakeLists.txt
.claude/: settings.local.json
board/: Makefile
board/src/: main_board.cc
include/: audio_engine.h  cv_pipeline.h  llm_pipeline.h
models/: clean_dataset.py  dataset.txt  export_int8_model.py  namepic.py
src/: audio_engine.cpp  cv_pipeline.cpp  llm_pipeline.cpp  main.cpp
templates/: m01_golden.json  m02_golden.json  m03_golden.json  m04_golden.json  m05_golden.json  m06_golden.json  m07_golden.json  m08_golden.json  m09_golden.json  m10_golden.json
tools/: category.py  export_rkllm.py  export_rknn.py  fuse_golden.py
